# BexarLandMine

./: .gitignore  Pipfile  README.md  config.toml  pyproject.toml  requirements.txt
BexarLandMine/: __init__.py  __main__.py
BexarLandMine/Config/: __init__.py  config.py
BexarLandMine/Data/: __init__.py  db.py
BexarLandMine/HTML/: __init__.py
BexarLandMine/HTML/Node/: __init__.py  htmlnode.py
BexarLandMine/HTML/Parser/: __init__.py  detail.py  parser.py  resultlist.py
BexarLandMine/Land/: __init__.py  detail.py
BexarLandMine/Parser/: __init__.py
tests/: test_details.py  test_parser.py
